# FireCore

./: .gitattributes  .gitignore  AGENTS.md  CHANGES_DEBUG_TO_INDRANIL.md  CHANGES_MASTER_TO_INDRANIL.md  CMakeLists.txt  Doxyfile  INDRANIL_BRANCH_SUMMARY.md  Makefile  Makefile.py  MolecularDynamics.py  README.md  check_EFF_forces_cpu_vs_gpu.md  cleanup_cpp_extension.sh  compile_commands.json  diff.sh  diff_hcomps.sh  git_info.py  index.md  make.sh  move_files.py  no_cache_server.py.py  nvidia_opencl_profiling.json  requirements.txt  run.sh  run_web_server.sh  test.sh  test_FireCoreVisual.sh  test_opengl_debug.py
cpp/: CMakeLists.txt  Makefile  README.md  emscripten.conf.template  makefile
cpp/apps/: CMakeLists.txt
cpp/apps_CUDA/: CMakeLists.txt  cuMM.h  cuMMFF_lib.cpp
cpp/apps_OCL/: CMakeLists.txt
cpp/common/: CMakeLists.txt  IO_utils.h  LuaClass.h  LuaHelpers.h  ScriptLang.h  argparse.h  arrayAlgs.h  browser.h  constants.h  constexprString.h  datatypes.h  datatypes_utils.h  debugAllocator.h  globals.h  libUtils.h  macroUtils.h  repl.h  script_parser.h  testUtils.h  test_globals.h
cpp/common_SDL/: CMakeLists.txt  GLUtils.h  SDL_utils.h  browser_sdl.h
cpp/common_resources/: -COOH.xyz  BPBA.xyz  Benzene_deriv.xyz  CH2O.xyz  CHOCHO.xyz  CHONH2.xyz  CO.xyz  DA.mol2  ElementTypes.dat~HEAD  GAFF_parameters.ods  H.xyz  H2O.xyz  HCOOH.xyz  H_xline.xyz  NH3.xyz  NH3_R.xyz  N_2edge_assay_1.mol  N_2edge_assay_1.xyz  NaCl_13x8_L3_step.xyz  NaCl_1x1.lvs  NaCl_1x1.xyz  NaCl_564.lvs  NaCl_564.xyz  NaCl_sym-center.lvs  NaCl_sym-center.xyz  NaCl_sym.xyz  O2.xyz  PTCDA.xyz  PTCDA_SAM.xyz  butandiol-2.xyz  dicarboxylic_acid.cons  dicarboxylic_acid.xyz  dicarboxylic_acid_simple.cons  dicarboxylic_acid_simple.xyz  enthropic_spring_10.cons  enthropic_spring_10.xyz  enthropic_spring_20.cons  enthropic_spring_20.xyz  enthropic_spring_5.cons  enthropic_spring_5.xyz  (+29 more)
cpp/libs/: CMakeLists.txt  quadrature_lib.cpp
cpp/libs_OCL/: CMakeLists.txt  MMFFmulti_lib.cpp  OCL_GridFF.cpp
cpp/libs_SDL/: CMakeLists.txt  MolGUIlib.cpp
cpp/results/: CMakeLists.txt  free_energy.cpp
cpp/sketches_SDL/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  test_MMFFsp3_loc.cpp  test_add.cpp  test_free_energy.cpp  test_molecular_database.cpp
tests/: CMakeLists.txt  README.md  clean  test_add.py  test_energy_force.py
tests/Circumcoronene/: fireball.in  input.bas
tests/Fireball/: Fdata
tests/Milan_tests/: run_GUI.sh  run_preset_throughput.sh  run_preset_throughput_MMFF.sh  run_throughput.py  run_throughput.sh  run_throughput_MD.py  run_throughput_MMFF.sh  run_throughput_MMFF_parametric.sh  run_throughput_UFF.py  run_throughput_UFF.sh
tests/NonBondSampling/: afm_hbond.py  molmesh2d.py  sample.py
tests/blender/: p1_sphere.py  p2_atoms.py  p2_atoms_no_dep.py  try_plot_mol_new.py
tests/dftb/: dftb.py  dftb_jobs_frags.py  dftb_post_proc.py  dftb_postproc.py  dftb_scan.py  dftb_scan_run.py  plot_Es.py
tests/pyFireball/: Fdata  Sample_Molecule_Density_points.md  density_along_line.py  distort_molecule.py  export_HS_sparse.py  mo_plane_demo.py  plot_fdata_wf_2c.py  plot_h2o_density_plane.py  relax_molecule.py  relax_molecules.sh  run.sh  run_add_epairs.py  run_density_on_samples.py  sample_density_points.py  test_OMM_ocl.py  test_fit_density_fire.py  test_grid_projection.py  verify_C2.py  verify_C3.py  verify_Fdata_read_3c.py  verify_H2.py  verify_scan_2c.py  verify_scan_3c.py  wf_pareto_fit.py
tests/pyocl_dft/: test_density.py  test_firecore_data.py
tests/python_tests/: test_force_as_gradient_of_energy.py
tests/pyutils/: PTCDA_NaCl.py  orient.py  plotStuckAtomTrj.py
tests/t01_H2/: fireball.in  input.bas
tests/t01_H2-KS/: fireball.in  input.bas
tests/t02_CH4/: fireball.in  run.sh
tests/t02_H4/: fireball.in
tests/t03_C2H2/: fireball.in
tests/t05_C2H6/: fireball.in  run.sh
tests/t06_C6H6/: input.bas  run.sh
tests/t07_Cn/: fireball.in  input.bas
tests/t07_biphenyl/: Fdata
tests/t08_CnHn/: input.bas
tests/t08_pentacene/: fireball.in  input.bas
tests/t10_diacetylene/: input.bas
tests/t10_diacetylene-CH3/: input.kpts
tests/t11_terephtalic/: cel.lvs
tests/t12_PTCA/: input.bas
tests/t13_DieselAlder2/: Fdata  cel.lvs  input.bas
tests/t13_DiselAlder/: cel.lvs  input.bas
tests/t15_CH2O/: input.bas
tests/t16_pyridine/: cel.lvs  fireball.in  input.bas
tests/tAttach/: PNA_CG.mol2  TNA_CG-.mol2  attach.py  attach_new.py  attach_new3.py  backbone.xyz  join_mols.py  polymerize.py  run_editor.py
tests/tCUDA/: run.sh  run_nvsight.sh  test_UFF_ocl.py  test_mmff_cuda_vs_ocl.py  test_sample_GridFF.py  test_sample_grid.py
tests/tDFT/: fireball.in  input.bas
tests/tDFT_CO/: run.py
tests/tDFT_pentacene/: answer.xyz  fireball.in  run.py  run.sh
tests/tEFF/: AI_angdist_show.py  AI_angdist_show_MGP.py  AI_angdist_sim.py  AI_angdist_sim_MGP.py  AI_angdist_sim_MGP_H2O.py  BondLengths.gnumeric  ERR  H2O_eff.lammps  H2O_eff_lammps.data  H2O_noe2__relax.xyz  H2O_noe2__relaxed.fgo  H2O_pairs.xyz  H2O_pairs_fc.xyz  H2O_spins.xyz  H2O_spins_fc.xyz  H2_relax.xyz  H2_relaxed.fgo  OUT  Single_relax.py  ToDo_EFF.md  check_EFF_forces_cpu_vs_gpu.md  compare_eff_energies.py  plotSample.py  plotSampleExample.py  plotSampleSize.py  plot_EA.py  plot_EE.py  run.py  run.sh  run_dynamics.py  run_eff_lammps.py  run_eff_lammps_subprocess.py  run_energyToBondlength.py  run_evalPieces.py  run_lammps_2d_map.py  run_process_xyz.py  run_process_xyz_1d.py  run_process_xyz_e.py  run_scan_Oe_ECP.py  run_scan_constr.py  (+6 more)
tests/tEFFapp/: run.sh
tests/tFF2D/: ff2dGUI.py  run.sh
tests/tFitFF/: C2H4.xyz  run.py  run.sh
tests/tFitREQ/: Directional_Barrier.py  H2O_single.xyz  Optimized_DOFs_MorseQ_SR2_all.txt  README.md  add_charges.py  check_fitREQ_ocl_cpp.md  check_fitREQ_ocl_cpp.py  check_fitREQ_ocl_cpp_derivs_.py  fit_manual.py  fit_manual_2.py  fit_manual_2d.py  fit_manual_OH.py  fit_manual_samp.py  input_2CH2NH.xyz  input_example.xyz_Epairs.xyz  input_example_1.xyz  just_Epair_1x1_ee.xyz  just_Epair_1x1_eh.xyz  just_Epair_2x2.xyz  opt_2D.py  opt_2D_2.py  opt_2D_bak.py  opt_2D_multi.py  opt_2D_new copy.py  (+21 more)
(+8947 files in other folders)
